--- a/app/views/layouts/application.js.erb
+++ b/app/views/layouts/application.js.erb
@@ -1,5 +1,6 @@
 (function() {
     <% controller, action = poke_js_template %>
+    POKE.define('POKE', { controller: "<%=controller%>", action: "<%=action%>", method: "<%=request.method%>", path: "<%=request.env['PATH_INFO']%>" });
     APP.<%= controller.gsub("/", ".") %>.js.<%= action %>_params = <%= yield %>;
     POKE.exec_all('<%= poke_js_template[0] %>', 'js', '<%= poke_js_template[1] %>');
 })();
