--- a/app/views/layouts/application.js.erb
+++ b/app/views/layouts/application.js.erb
@@ -1,6 +1,6 @@
 (function() {
     <% controller, action = poke_js_template %>
-    POKE.define('POKE', { controller: "<%=controller%>", action: "<%=action%>", method: "<%=request.method%>", path: "<%=request.env['PATH_INFO']%>" });
+    POKE.define('POKE', { controller: "<%= controller %>", action: "<%= action %>", method: "<%= request.method %>", path: "<%= request.env['PATH_INFO'] %>", format: <%= request.format.symbol %> });
     APP.<%= controller.gsub("/", ".") %>.js.<%= action %>_params = <%= yield %>;
     POKE.exec_all('<%= poke_js_template[0] %>', 'js', '<%= poke_js_template[1] %>');
 })();
